[fix] replace JDK11 API call with 8.
Files$writeString is replaced with Files#write and String#getBytes().